# FileSort

./: CMakeLists.txt  FileChunk.cpp  FileChunk.hpp  FileManager.cpp  FileManager.hpp  FileSort.cpp  FileSort.hpp  Log.hpp  Platform.hpp  README.md  Word.hpp  WordsArray.cpp  WordsArray.hpp  build.bat  main.cpp  outtest.txt  stopwatch.hpp  test.txt  todo  win32_bigfile.cpp
Linux/: CMakeCache.txt  FileSort  Makefile  SortFile  cmake_install.cmake  outtest2.txt  test2.txt
Sources/: FileManager.cpp  FileManager.hpp  FileSort.cpp  FileSort.hpp  Log.hpp  Platform.hpp  Word.cpp  Word.hpp  WordsArray.cpp  WordsArray.hpp  main.cpp
Windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FileSort.sln  FileSort.vcxproj  FileSort.vcxproj.filters  Makefile  SortFile.sln  SortFile.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  outtest.txt  test.txt
Windows/FileSort.dir/Debug/: FileSort.exe.recipe
Windows/FileSort.dir/Debug/FileSort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/FileSort.dir/Release/: FileSort.exe.recipe
Windows/FileSort.dir/Release/FileSort.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FileSort.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/SortFile.dir/Debug/: SortFile.exe.recipe
Windows/SortFile.dir/Release/: SortFile.exe.recipe
Windows/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
data/: outtest.txt  test.txt
(+19 files in other folders)
